# my-projects

./: README.md  package-lock.json
Art Gallery (2022)/: CMakeLists.txt  Customer_Curation_Sale_Gallery.cpp  Customer_Curation_Sale_Gallery.h  README.md  main.cpp  util_date_uniqueIDs.h
Java Compiler Project (2023)/: README.md
Java Compiler Project (2023)/ast/: AST.java  IdTree.java  IntTree.java  MultOpTree.java  ProgramTree.java  RelOpTree.java  WhileTree.java
Java Compiler Project (2023)/codegen/: Code.java  Codegen.java  Codes.java  LabelOpcode.java  NumOpcode.java  Program.java  VarOpcode.java
Java Compiler Project (2023)/compiler/: Compiler.java
Java Compiler Project (2023)/constrain/: Constrainer.java  Table.java
Java Compiler Project (2023)/visitor/: ASTVisitor.java  PrintVisitor.java
Lexer Project (2023)/: README.md
Lexer Project (2023)/lexer/: Lexer.java  Token.java
Lexer Project (2023)/sample_files/: operators.x
Stack Calculator(2023)/: README.md
Stack Calculator(2023)/evaluator/: Evaluator.java
Stack Calculator(2023)/operand/: Operand.java
Stack Calculator(2023)/operator/: AdditionOperator.java  DivisionOperator.java  MultiplicationOperator.java  Operator.java  SquareOperator.java  SubtractionOperator.java  (+2 more)
artworkLab914/: Artist.cpp  Artist.h  Artwork.cpp  Artwork.h  CMakeLists.txt
codingLab5/: Artwork_Artist.cpp  Artwork_Artist.h  unitTests.h  util_date_uniqueIDs.cpp
middleware/: posts.js  validation.js
public/js/: fetch.js
roadStream videoApp (2023)/: README.md  app.js
routes/: posts.js
views/: postvideo.hbs  register.hbs
(+28 files in other folders)
